@@ -192,6 +192,8 @@ RELEASE 0.95 - XXX
   - Initialize all *FLAGS variables with objects do the right thing with
     appending flags as strings or lists.
 
+  - Make things like ${TARGET.dir} work in *PATH construction variables.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
